--- a/index.html
+++ b/index.html
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Hard Rock Solution - Song Lyric App</title>
-    <!-- Required meta tags -->
+    <title>Hard Rock Song Lyrics</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <!-- Favicon -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
-    <!-- Custom css -->
     <link rel="stylesheet" href="style.css" />
   </head>
-
   <body>
     <div class="container">
       <nav class="navbar navbar-dark my-3">
@@ -66,31 +61,33 @@
       </nav>
 
       <main class="content-area">
-        <div class="search-bar col-md-6 mx-auto">
-          <h1 class="text-center">Lyrics Search</h1>
+        <div class="search-bar col-md-8 mx-auto">
+          <h1 class="text-center header-title">Lyrics Search</h1>
           <div class="search-box my-5">
             <input
+              id="search-txt"
               type="text"
               class="form-control"
-              id="song-name"
-              placeholder="Enter your artist song name"
+              placeholder="Enter your artist or song name"
             />
-            <button id="search-song" class="btn btn-success search-btn">
+            <button id="search-btn" class="btn btn-success search-btn">
               Search
             </button>
           </div>
         </div>
-        <!-- === Simple results === -->
-        <div class="d-flex justify-content-center">
-          <div class="simple-result"></div>
-        </div>
-        <!-- Single Lyrics -->
-        <div class="single-lyrics text-center"></div>
-        <!-- === Fancy results === -->
-        <div class="search-result col-md-8 mx-auto py-4">
-          <!-- single result -->
 
-          <!-- ./ single result -->
+        <div
+          id="search-result"
+          class="search-result col-md-8 mx-auto py-4"
+        ></div>
+
+        <div id="song-lyrics" class="song-lyrics text-center">
+          <div id="myOutput" class="output">
+            <div
+              id="output"
+              class="output-content song-lyrics text-center"
+            ></div>
+          </div>
         </div>
       </main>
     </div>
@@ -100,7 +97,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-    <!-- Custom Script Here -->
+    <!-- Custom JS -->
     <script src="script.js"></script>
   </body>
 </html>
