--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
          <!-- Copyright -->
          <div class="footer-copyright text-center py-3">© Copyright: 2020 
-            <a>Parijat Datta</a>
+            <a>The Godfather</a>
           </div>
           <!-- Copyright -->
         
